--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.4.3",
     "react": "^18.3.1",
